[tool.poetry]
name = "rubix-point"
version = "2.1.1"
description = "Rubix Point Service"
authors = ["NubeIO <tech-support@nube-io.com>"]

[tool.poetry.dependencies]
python = "^3.6"
gunicorn = "^20.0.4"
pymodbus = "^2.4.0"
influxdb = "^5.3.1"
influxdb-client = "^1.13.0"
psycopg2-binary = "^2.8.6"
rubix-http = { git = "https://github.com/NubeIO/rubix-http", rev = "v1.1.1" }
rubix-registry = { git = "https://github.com/NubeIO/rubix-registry", rev = "v1.1.1" }
rubix-mqtt = { git = "https://github.com/NubeIO/rubix-mqtt", rev = "v1.3.0" }
Flask-Migrate = "^2.6.0"
shortuuid = "^1.0.1"
gevent = "^21.1.2"
Flask = "1.1.2"

[tool.poetry.dev-dependencies]
pyinstaller = "^4.1"
pytest = "^6.2.2"
Flask-Script = "^2.0.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
